// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HierarchicalMenu applies translations 1`] = `
<div
  className="ais-HierarchicalMenu"
>
  <ul
    className="ais-HierarchicalMenu-list"
  >
    <li
      className="ais-HierarchicalMenu-item ais-HierarchicalMenu-item--parent"
    >
      <a
        className="ais-HierarchicalMenu-link"
        href="#"
        onClick={[Function]}
      >
        <span
          className="ais-HierarchicalMenu-label"
        >
          white
        </span>
         
        <span
          className="ais-HierarchicalMenu-count"
        >
          10
        </span>
      </a>
      <ul
        className="ais-HierarchicalMenu-list ais-HierarchicalMenu-list--child"
      >
        <li
          className="ais-HierarchicalMenu-item"
        >
          <a
            className="ais-HierarchicalMenu-link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="ais-HierarchicalMenu-label"
            >
              white1
            </span>
             
            <span
              className="ais-HierarchicalMenu-count"
            >
              3
            </span>
          </a>
        </li>
        <li
          className="ais-HierarchicalMenu-item"
        >
          <a
            className="ais-HierarchicalMenu-link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="ais-HierarchicalMenu-label"
            >
              white2
            </span>
             
            <span
              className="ais-HierarchicalMenu-count"
            >
              4
            </span>
          </a>
        </li>
      </ul>
    </li>
    <li
      className="ais-HierarchicalMenu-item"
    >
      <a
        className="ais-HierarchicalMenu-link"
        href="#"
        onClick={[Function]}
      >
        <span
          className="ais-HierarchicalMenu-label"
        >
          black
        </span>
         
        <span
          className="ais-HierarchicalMenu-count"
        >
          20
        </span>
      </a>
    </li>
    <li
      className="ais-HierarchicalMenu-item"
    >
      <a
        className="ais-HierarchicalMenu-link"
        href="#"
        onClick={[Function]}
      >
        <span
          className="ais-HierarchicalMenu-label"
        >
          blue
        </span>
         
        <span
          className="ais-HierarchicalMenu-count"
        >
          30
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`HierarchicalMenu default hierarchical menu 1`] = `
<div
  className="ais-HierarchicalMenu"
>
  <ul
    className="ais-HierarchicalMenu-list"
  >
    <li
      className="ais-HierarchicalMenu-item ais-HierarchicalMenu-item--parent"
    >
      <a
        className="ais-HierarchicalMenu-link"
        href="#"
        onClick={[Function]}
      >
        <span
          className="ais-HierarchicalMenu-label"
        >
          white
        </span>
         
        <span
          className="ais-HierarchicalMenu-count"
        >
          10
        </span>
      </a>
      <ul
        className="ais-HierarchicalMenu-list ais-HierarchicalMenu-list--child"
      >
        <li
          className="ais-HierarchicalMenu-item"
        >
          <a
            className="ais-HierarchicalMenu-link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="ais-HierarchicalMenu-label"
            >
              white1
            </span>
             
            <span
              className="ais-HierarchicalMenu-count"
            >
              3
            </span>
          </a>
        </li>
        <li
          className="ais-HierarchicalMenu-item"
        >
          <a
            className="ais-HierarchicalMenu-link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="ais-HierarchicalMenu-label"
            >
              white2
            </span>
             
            <span
              className="ais-HierarchicalMenu-count"
            >
              4
            </span>
          </a>
        </li>
      </ul>
    </li>
    <li
      className="ais-HierarchicalMenu-item"
    >
      <a
        className="ais-HierarchicalMenu-link"
        href="#"
        onClick={[Function]}
      >
        <span
          className="ais-HierarchicalMenu-label"
        >
          black
        </span>
         
        <span
          className="ais-HierarchicalMenu-count"
        >
          20
        </span>
      </a>
    </li>
  </ul>
  <button
    className="ais-HierarchicalMenu-showMore"
    disabled={false}
    onClick={[Function]}
  >
    Show more
  </button>
</div>
`;

exports[`HierarchicalMenu default hierarchical menu with a custom className 1`] = `
<div
  className="ais-HierarchicalMenu MyCustomHierarchicalMenu"
>
  <ul
    className="ais-HierarchicalMenu-list"
  >
    <li
      className="ais-HierarchicalMenu-item ais-HierarchicalMenu-item--parent"
    >
      <a
        className="ais-HierarchicalMenu-link"
        href="#"
        onClick={[Function]}
      >
        <span
          className="ais-HierarchicalMenu-label"
        >
          white
        </span>
         
        <span
          className="ais-HierarchicalMenu-count"
        >
          10
        </span>
      </a>
      <ul
        className="ais-HierarchicalMenu-list ais-HierarchicalMenu-list--child"
      >
        <li
          className="ais-HierarchicalMenu-item"
        >
          <a
            className="ais-HierarchicalMenu-link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="ais-HierarchicalMenu-label"
            >
              white1
            </span>
             
            <span
              className="ais-HierarchicalMenu-count"
            >
              3
            </span>
          </a>
        </li>
        <li
          className="ais-HierarchicalMenu-item"
        >
          <a
            className="ais-HierarchicalMenu-link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="ais-HierarchicalMenu-label"
            >
              white2
            </span>
             
            <span
              className="ais-HierarchicalMenu-count"
            >
              4
            </span>
          </a>
        </li>
      </ul>
    </li>
    <li
      className="ais-HierarchicalMenu-item"
    >
      <a
        className="ais-HierarchicalMenu-link"
        href="#"
        onClick={[Function]}
      >
        <span
          className="ais-HierarchicalMenu-label"
        >
          black
        </span>
         
        <span
          className="ais-HierarchicalMenu-count"
        >
          20
        </span>
      </a>
    </li>
  </ul>
  <button
    className="ais-HierarchicalMenu-showMore"
    disabled={false}
    onClick={[Function]}
  >
    Show more
  </button>
</div>
`;
